2005-03-11  Petr Ovtchenkov  <ptr@island...>

	* build/test/unit/gcc.mak: don't write runtime path to libstlport
	in case of crosscompilation.

	* stlport/stl/_cmath.h: exclude *f and *l variants of math functions
	if ones absent in system; add missed hypot function; few workarounds
	for uClibc and for VC.

	* src/complex.cpp, complex_exp.cpp, complex_trig.cpp: workaround
	for systems without *f and *l variants of math functions.

	* test/unit/resolve_name.cpp: exclude test line that confuse VC.

	* stlport/cstdlib: div isn't intrinsic for VC.

	* stlport/config/stl_gcc.h: don't use *f and *l math functions in
	case of uClibc.

2005-03-09  Petr Ovtchenkov  <ptr@island...>

	* doc/FAQ: FAQ was established.

2005-03-07  Francois Dumont  <dums@stlport...>

	* stlport/stl/_bitset.h, _bitset.c: Avoid include of istream when
	NO_IOSTREAMS mode thanks Bruno report.

	* stlport/stl/char_traits.h: Modification of the streamoff and streamsize
	definition to take into account the 64 bits file access support.

	* test/unit/fstream.cpp: New test for big files ( > 2Go) unactivated by
	default. 

2005-03-06  Petr Ovtchenkov  <ptr@island...>

	* stlport/cstdlib, stlport/cmath, stlport/stl/_cmath.h: define
	overloaded functions in the scope of global namespace and then import
	all in stlp_std with 'using' directive. This is better than
	solution from 2005-03-04 below.

	* stlport/cmath: include cstdlib, due to declarations of abs
	with integer types required in overload and then 'using'.

	* src/complex.cpp, src/complex_exp.cpp, src/complex_trig.cpp: replace
	macros that possible will be removed

2005-03-05  Francois Dumont  <dums@stlport...>

	* stlport/stl/_construct.h: Simplification of the _Copy_Construct
	function, now only takes a single template parameter and only call
	the strict copy constructor. Creation of the _Param_Construct function
	that replace the former _Copy_Construct implementation.

	* cstdlib: Fix abs definition for MSVC compilers.
